--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootstrap_step_by_step</title>
     <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/contact.css">
+
     <link rel="shortcut icon" href="Images/-meal_89750.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/c25cabee86.js" crossorigin="anonymous"></script>
     <!-- Bootstrap-->
@@ -153,5 +155,24 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="JS/main.js">       
     </script>
+
+    <div id="demo-modal" class="modal fade">
+      <img class="rounded-circle mx-auto" src="Images/Contact/Email-Icon.png" alt="Email" width="100" height="100">
+      
+      <div class="modal-dialog modal-lg modal-dialog-centered">
+          <div class="modal-content">
+            <div class="modal-body text-center">
+              <h4>Subscribe to our newsletter</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat ante luctus eu.</p>
+              <div class="input-group">
+                  <input type="email" class="form-control" placeholder="Enter your email address" name="email">
+                  <div class="input-group-append">
+                      <input type="submit" class="btn" value="Subscribe">
+                  </div>
+              </div>
+          </div>
+          </div>
+      </div>
+    </div>
 </body>
 </html>
